--- a/StreamingMovie.Web/Views/Account/Login.cshtml
+++ b/StreamingMovie.Web/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
-﻿
-@model StreamingMovie.Web.ViewModels.LoginViewModel
+﻿@using StreamingMovie.Web.Views.Account.ViewModels
+
+@model LoginViewModel
 @{
     ViewData["Title"] = "Login";
 }
