--- a/StreamingMovie.Web/Views/Account/Register.cshtml
+++ b/StreamingMovie.Web/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model StreamingMovie.Web.ViewModels.LoginViewModel
+﻿@using StreamingMovie.Web.Views.Account.ViewModels
+@model LoginViewModel
 @{
     ViewData["Title"] = "Register";
 }
