--- a/StreamingMovie.Web/Views/Account/Login.cshtml
+++ b/StreamingMovie.Web/Views/Account/Login.cshtml
@@ -27,15 +27,30 @@
             <div class="col-lg-6">
                 <div class="login__form">
                     <h3>Login</h3>
-                    <form action="#">
+                    <form asp-action="Login" method="post">
+
+                        <input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]" />
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <span asp-validation-for="Email" class="text-danger position-relative"></span>
                         <div class="input__item">
-                            <input type="text" placeholder="Email address">
+                            <input asp-for="Email" placeholder="Email address" class="form-control" required />
                             <span class="icon_mail"></span>
                         </div>
+
+                        <span asp-validation-for="Password" class="text-danger position-relative"></span>
                         <div class="input__item">
-                            <input type="text" placeholder="Password">
+                            <input asp-for="Password" placeholder="Password" class="form-control" required />
                             <span class="icon_lock"></span>
                         </div>
+
+                        <div class="form-group form-check">
+                            <label class="form-check-label text-white">
+                                <input class="form-check-input" asp-for="RememberMe" />
+                                @Html.DisplayNameFor(model => model.RememberMe)
+                            </label>
+                        </div>
+
                         <button type="submit" class="site-btn">Login</button>
                     </form>
                     <a href="#" class="forget_pass">Forgot Your Password?</a>
@@ -44,7 +59,7 @@
             <div class="col-lg-6">
                 <div class="login__register">
                     <h3>Dont’t Have An Account?</h3>
-                    <a asp-action="Register" asp-controller="Account" class="primary-btn">Sign Up Now</a>
+                    <a asp-action="Register" asp-controller="Account" class="site-btn">Sign Up Now</a>
                 </div>
             </div>
         </div>
