--- a/StreamingMovie.Web/Views/Admin/Table.cshtml
+++ b/StreamingMovie.Web/Views/Admin/Table.cshtml
@@ -27,7 +27,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-2.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user1" />
+                                                <img src="~/assets/img/team-2.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user1" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">John Michael</h6>
@@ -53,7 +53,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-3.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user2" />
+                                                <img src="~/assets/img/team-3.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user2" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Alexa Liras</h6>
@@ -79,7 +79,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-4.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user3" />
+                                                <img src="~/assets/img/team-4.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user3" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Laurent Perrier</h6>
@@ -105,7 +105,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-3.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user4" />
+                                                <img src="~/assets/img/team-3.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user4" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Michael Levi</h6>
@@ -131,7 +131,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-2.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user5" />
+                                                <img src="~/assets/img/team-2.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user5" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Richard Gran</h6>
@@ -157,7 +157,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b-0 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2 py-1">
                                             <div>
-                                                <img src="../assets/img/team-4.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user6" />
+                                                <img src="~/assets/img/team-4.jpg" class="inline-flex items-center justify-center mr-4 text-sm text-white transition-all duration-200 ease-in-out h-9 w-9 rounded-xl" alt="user6" />
                                             </div>
                                             <div class="flex flex-col justify-center">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Miriam Eric</h6>
@@ -212,7 +212,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-spotify.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="spotify" />
+                                                <img src="~/assets/img/small-logos/logo-spotify.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="spotify" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Spotify</h6>
@@ -245,7 +245,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-invision.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="invision" />
+                                                <img src="~/assets/img/small-logos/logo-invision.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="invision" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Invision</h6>
@@ -278,7 +278,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-jira.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="jira" />
+                                                <img src="~/assets/img/small-logos/logo-jira.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="jira" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Jira</h6>
@@ -311,7 +311,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-slack.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="slack" />
+                                                <img src="~/assets/img/small-logos/logo-slack.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="slack" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Slack</h6>
@@ -344,7 +344,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b dark:border-white/40 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-webdev.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="webdev" />
+                                                <img src="~/assets/img/small-logos/logo-webdev.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="webdev" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Webdev</h6>
@@ -377,7 +377,7 @@
                                     <td class="p-2 align-middle bg-transparent border-b-0 whitespace-nowrap shadow-transparent">
                                         <div class="flex px-2">
                                             <div>
-                                                <img src="../assets/img/small-logos/logo-xd.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="xd" />
+                                                <img src="~/assets/img/small-logos/logo-xd.svg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 ease-in-out rounded-full h-9 w-9" alt="xd" />
                                             </div>
                                             <div class="my-auto">
                                                 <h6 class="mb-0 text-sm leading-normal dark:text-white">Adobe XD</h6>
