--- a/StreamingMovie.Web/Views/Admin/Billing.cshtml
+++ b/StreamingMovie.Web/Views/Admin/Billing.cshtml
@@ -83,7 +83,7 @@
                             <div class="flex flex-wrap -mx-3">
                                 <div class="max-w-full px-3 mb-6 md:mb-0 md:w-1/2 md:flex-none">
                                     <div class="relative flex flex-row items-center flex-auto min-w-0 p-6 break-words bg-transparent border border-solid shadow-none md-max:overflow-auto rounded-xl border-slate-100 dark:border-slate-700 bg-clip-border">
-                                        <img class="mb-0 mr-4 w-1/10" src="../assets/img/logos/mastercard.png" alt="logo" />
+                                        <img class="mb-0 mr-4 w-1/10" src="~/assets/img/logos/mastercard.png" alt="logo" />
                                         <h6 class="mb-0 dark:text-white">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;7852</h6>
                                         <i class="ml-auto cursor-pointer fas fa-pencil-alt text-slate-700" data-target="tooltip_trigger" data-placement="top"></i>
                                         <div data-target="tooltip" class="hidden px-2 py-1 text-sm text-white bg-black rounded-lg">
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="max-w-full px-3 md:w-1/2 md:flex-none">
                                     <div class="relative flex flex-row items-center flex-auto min-w-0 p-6 break-words bg-transparent border border-solid shadow-none md-max:overflow-auto rounded-xl border-slate-100 dark:border-slate-700 bg-clip-border">
-                                        <img class="mb-0 mr-4 w-1/10" src="../assets/img/logos/visa.png" alt="logo" />
+                                        <img class="mb-0 mr-4 w-1/10" src="~/assets/img/logos/visa.png" alt="logo" />
                                         <h6 class="mb-0 dark:text-white">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;5248</h6>
                                         <i class="ml-auto cursor-pointer fas fa-pencil-alt text-slate-700" data-target="tooltip_trigger" data-placement="top"></i>
                                         <div data-target="tooltip" class="hidden px-2 py-1 text-sm text-white bg-black rounded-lg">
