--- a/StreamingMovie.Web/Views/Account/Login.cshtml
+++ b/StreamingMovie.Web/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <!-- Normal Breadcrumb Begin -->
-<section class="normal-breadcrumb set-bg bg-fixed" data-setbg="@Url.Content("~/img/slider-bg.jpg")">
+<section class="normal-breadcrumb set-bg" data-setbg="@Url.Content("~/img/slider-bg.jpg")">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
