--- a/StreamingMovie.Web/Views/Shared/_Layout.cshtml
+++ b/StreamingMovie.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css" type="text/css">
@@ -42,7 +43,13 @@
                 <div class="col-lg-8">
                     <div class="header__nav">
                         @functions {
-                            public string IsActive(string controller, string action)
+                            public string IsCurrentController(string controller)
+                            {
+                                var currentController = ViewContext.RouteData.Values["controller"]?.ToString();
+                                return (currentController == controller) ? "active" : "";
+                            }
+
+                            public string IsCurrentActionr(string controller, string action)
                             {
                                 var currentController = ViewContext.RouteData.Values["controller"]?.ToString();
                                 var currentAction = ViewContext.RouteData.Values["action"]?.ToString();
@@ -51,20 +58,20 @@
                         }
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="@IsActive("Home", "Index")">
+                                <li class="@IsCurrentActionr("Home", "Index")">
                                     <a asp-action="Index" asp-controller="Home">Homepage</a>
                                 </li>
-                                <li class="@IsActive("Category", "Categories")">
-                                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                                <li class="@IsCurrentController("Category")">
+                                    <a asp-action="Categories" asp-controller="Category" class="dropdown-toggle">
                                         Categories
                                     </a>
                                     @await Component.InvokeAsync("CategoryMenu")
                                 </li>
-                                <li class="@IsActive("Blog", "Blogs")">
+                                <li class="@IsCurrentController("Blog")">
                                     <a asp-action="Blogs" asp-controller="Blog">Blog</a>
                                 </li>
-                                <li class="@IsActive("Home", "Contact")">
-                                    <a asp-action="Contact" asp-controller="Home">Contacts</a>
+                                <li class="@IsCurrentActionr("Contact", "Contact")">
+                                    <a asp-action="Contact" asp-controller="Contact">Contacts</a>
                                 </li>
                             </ul>
                         </nav>
@@ -99,16 +106,16 @@
                 <div class="col-lg-6">
                     <div class="footer__nav">
                         <ul>
-                            <li class="@IsActive("Home", "Index")">
+                            <li class="@IsCurrentActionr("Home", "Index")">
                                 <a asp-action="Index" asp-controller="Home">Homepage</a>
                             </li>
-                            <li class="@IsActive("Category", "Categories")">
+                            <li class="@IsCurrentActionr("Category", "Categories")">
                                 <a asp-action="Categories" asp-controller="Category">Categories</a>
                             </li>
-                            <li class="@IsActive("Blog", "Blogs")">
+                            <li class="@IsCurrentActionr("Blog", "Blogs")">
                                 <a asp-action="Blogs" asp-controller="Blog">Blog</a>
                             </li>
-                            <li class="@IsActive("Home", "Contact")">
+                            <li class="@IsCurrentActionr("Home", "Contact")">
                                 <a asp-action="Contact" asp-controller="Home">Contacts</a>
                             </li>
                         </ul>
@@ -130,9 +137,14 @@
     <div class="search-model">
         <div class="h-100 d-flex align-items-center justify-content-center">
             <div class="search-close-switch"><i class="icon_close"></i></div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
+            <div class="search-box bg-white rounded-pill px-4 py-3 d-flex align-items-center shadow">
+                <form class="search-model-form d-flex flex-grow-1" asp-action="Search" asp-controller="Movie" method="get">
+                    <input type="text" name="q" id="search-input" placeholder="Search here....." class="form-control border-0 bg-transparent me-2">
+                    <button type="submit" class="btn p-2 border-0 bg-transparent">
+                        <span class="icon_search fa-2x"></span>
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
     <!-- Search model end -->
