--- a/StreamingMovie.Web/wwwroot/css/style.css
+++ b/StreamingMovie.Web/wwwroot/css/style.css
@@ -279,14 +279,16 @@ ol {
 }
 
 .search-model {
-	display: none;
 	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
-	left: 0;
-	top: 0;
-	background: #000;
-	z-index: 99999;
+	background-color: rgba(0, 0, 0, 0.4); /* Nền tối mờ */
+	backdrop-filter: blur(6px); /* Làm mờ phía sau */
+	-webkit-backdrop-filter: blur(6px); /* Safari support */
+	z-index: 1050;
+	display: none
 }
 
 .search-model-form {
@@ -297,9 +299,8 @@ ol {
 	width: 500px;
 	font-size: 40px;
 	border: none;
-	border-bottom: 2px solid #333;
 	background: 0 0;
-	color: #999;
+	color: #000;
 }
 
 .search-close-switch {
@@ -337,9 +338,7 @@ ol {
 	width: 100%;
 	z-index: 1000;
 	transition: background-color 0.3s ease;
-	background-color: rgba(7, 7, 32, 0.6); 
-	backdrop-filter: blur(4px);
-	-webkit-backdrop-filter: blur(4px);
+	background: linear-gradient(to bottom, rgba(7, 7, 32, 0.2), rgba(7, 7, 32, 0.8));
 }
 	.header.scrolled {
 		background-color: #070720;
@@ -393,7 +392,7 @@ ol {
 	left: 0;
 	top: 82px;
 	width: 150px;
-	background: #ffffff;
+	background: #1d1e39;
 	text-align: left;
 	padding: 5px 0;
 	z-index: 9;
@@ -458,9 +457,12 @@ ol {
 -----------------------*/
 
 .hero {
+	width: 100%;
 	padding-top: 100px;
 	padding-bottom: 50px;
 	background: url('../img/slider-bg.jpg') no-repeat;
+	background-size: cover;
+	background-position: top center;
 }
 
 .hero__items {
@@ -930,7 +932,8 @@ ol {
 	padding-top: 15px;
 }
 
-.product__pagination a {
+.product__pagination a, 
+.product__pagination form {
 	display: inline-block;
 	font-size: 15px;
 	color: #b7b7b7;
@@ -946,17 +949,28 @@ ol {
 	transition: all, 0.3s;
 }
 
-.product__pagination a:hover {
+.product__pagination a:hover,
+.product__pagination form:hover {
 	color: #ffffff;
 }
 
-.product__pagination a.current-page {
+.product__pagination a.current-page,
+.product__pagination form.current-page {
 	border: 1px solid #ffffff;
 }
 
-.product__pagination a i {
+.product__pagination a i,
+.product__pagination form i {
 	color: #b7b7b7;
 	font-size: 15px;
+}
+
+.ajax-form .btn-pagination {
+	all: unset;
+	cursor: pointer;
+	display: block;
+	width: 50px;
+	height: 50px;
 }
 
 /*---------------------
@@ -1436,7 +1450,7 @@ ol {
 -----------------------*/
 
 .blog-details {
-	padding-top: 70px;
+	padding-top: 120px;
 }
 
 .blog__details__title {
@@ -2360,3 +2374,44 @@ ol {
 		padding: 18px 20px 20px;
 	}
 }
+
+.category-card-wrapper {
+	padding-left: 5px;
+	padding-right: 10px;
+}
+
+.category-card {
+	border-radius: 16px;
+	height: 160px;
+	transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+	.category-card:hover {
+		transform: translateY(-4px);
+		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+		cursor: pointer;
+	}
+
+.card-title.fw-bold {
+	font-weight: 700 !important;
+}
+
+.category-card-1 { background-color: #D96C6C; }
+
+.category-card-2 { background-color: #D98E5F; }
+
+.category-card-3 { background-color: #D6B75A; }
+
+.category-card-4 { background-color: #7FA36E; }
+
+.category-card-5 { background-color: #5CA8A5; }
+
+.category-card-6 { background-color: #5F83B1; }
+
+.category-card-7 { background-color: #7B6AB2; }
+
+.category-card-8 { background-color: #9C7CBF; }
+
+.category-card-9 { background-color: #C488AA; }
+
+.category-card-default { background-color: #999; }
