--- a/StreamingMovie.Web/Views/Movie/Watching.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Watching.cshtml
@@ -25,8 +25,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="anime__video__player">
+                    <!-- gắn link video ở đây -->
                     <video id="player" playsinline controls poster="~/videos/anime-watch.jpg">
-                        <source src="videos/1.mp4" type="video/mp4" />
+                        <source src="~/videos/424962170_7050971591651660_3549123203233131325_n.mp4" type="video/mp4" />
                         <!-- Captions are optional -->
                         <track kind="captions" label="English captions" src="#" srclang="en" default />
                     </video>
