--- a/StreamingMovie.Web/Views/Movie/Details.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Details.cshtml
@@ -73,7 +73,7 @@
                         </div>
                         <div class="anime__details__btn">
                             <a href="#" class="follow-btn"><i class="fa fa-heart-o"></i> Follow</a>
-                            <a href="#" class="watch-btn">
+                            <a asp-action="Watching" asp-controller="Movie" class="watch-btn">
                                 <span>Watch Now</span> <i class="fa fa-angle-right"></i>
                             </a>
                         </div>
