--- a/StreamingMovie.Web/Views/Movie/MovieList.cshtml
+++ b/StreamingMovie.Web/Views/Movie/MovieList.cshtml
@@ -1,4 +1,4 @@
-﻿@using StreamingMovie.Application.Coomon.Pagination
+﻿@using StreamingMovie.Application.Common.Pagination
 @using StreamingMovie.Application.DTOs
 @model PagedResult<UnifiedMovieDTO>
 @{
