--- a/StreamingMovie.Web/Views/Shared/_Layout.cshtml
+++ b/StreamingMovie.Web/Views/Shared/_Layout.cshtml
@@ -22,6 +22,44 @@
     <link rel="stylesheet" href="~/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/style.css" type="text/css">
+
+    <style>
+        .dropdown-menu {
+            background-color: #0b122a !important; 
+            color: #fff !important;
+            padding: 0.5rem 0;
+            min-width: 120px;
+            border: none;
+        }
+
+        .dropdown-menu .dropdown-item {
+            background-color: transparent;
+            color: #fff !important; 
+            padding: 0.5rem 1rem;
+        }
+
+        .dropdown-menu .dropdown-item:hover {
+            color: #ffffff !important; 
+            background-color: transparent !important;
+            font-weight: 600; 
+        }
+
+        .dropdown-menu form button {
+            background: none;
+            border: none;
+            color: #fff !important;
+            padding: 0.5rem 1rem;
+            text-align: left;
+            width: 100%;
+            }
+
+        .dropdown-menu form button:hover {
+            color: #f5f5f5 !important;
+            background-color: transparent !important;
+        }
+
+    </style>
+
 </head>
 <body>
     <!-- Page Preloder -->
@@ -78,9 +116,29 @@
                     </div>
                 </div>
                 <div class="col-lg-2">
-                    <div class="header__right">
-                        <a href="#" class="search-switch"><span class="icon_search"></span></a>
-                        <a asp-action="Login" asp-controller="Account"><span class="icon_profile"></span></a>
+                    <div class="header__right d-flex justify-content-end align-items-center">
+                        <a href="#" class="search-switch me-3"><span class="icon_search"></span></a>
+
+                        <div class="dropdown d-inline-block">
+                            <a class="dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="icon_profile"></span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    <li>
+                                        <form asp-action="Logout" asp-controller="Account" method="post" class="dropdown-item m-0 p-0">
+                                            <button type="submit" class="btn w-100 text-start">Logout</button>
+                                        </form>
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li><a class="dropdown-item" asp-action="Login" asp-controller="Account">Login</a></li>
+                                }
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -157,6 +215,8 @@
     <script src="~/js/jquery.slicknav.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
     <script src="~/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
