--- a/StreamingMovie.Web/Views/Shared/_AdminLayout.cshtml
+++ b/StreamingMovie.Web/Views/Shared/_AdminLayout.cshtml
@@ -1,18 +1,4 @@
-﻿<!--
-
-=========================================================
-* Argon Dashboard 2 Tailwind - v1.0.1
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/argon-dashboard-tailwind
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-
-* Coded by www.creative-tim.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -88,7 +74,7 @@
                 </li>
 
                 <li class="mt-0.5 w-full">
-                    <a class="py-2.7 text-sm ease-nav-brand my-0 mx-2 flex items-center whitespace-nowrap px-4 transition-colors dark:text-white dark:opacity-80" href="../pages/rtl.html">
+                    <a class="py-2.7 text-sm ease-nav-brand my-0 mx-2 flex items-center whitespace-nowrap px-4 transition-colors dark:text-white dark:opacity-80" href="../admin/rtl.html">
                         <div class="mr-2 flex h-8 w-8 items-center justify-center rounded-lg bg-center stroke-0 text-center xl:p-2.5">
                             <i class="relative top-0 text-sm leading-normal text-red-600 ni ni-world-2"></i>
                         </div>
@@ -351,6 +337,7 @@
 </body>
 <!-- plugin for scrollbar  -->
 <script src="~/assets/js/plugins/perfect-scrollbar.min.js" async></script>
+<script src="~/assets/js/plugins/video-upload.js" async></script>
 <!-- main script file  -->
 <script src="~/assets/js/argon-dashboard-tailwind.js?v=1.0.1" async></script>
 </html>
