forgot, reset password

--- a/StreamingMovie.Web/Views/Account/Login.cshtml
+++ b/StreamingMovie.Web/Views/Account/Login.cshtml
@@ -53,7 +53,7 @@
 
                         <button type="submit" class="site-btn">Login</button>
                     </form>
-                    <a href="#" class="forget_pass">Forgot Your Password?</a>
+                    <a asp-action="ForgotPassword" asp-controller="Account" class="forget_pass">Forgot Your Password?</a>
                 </div>
             </div>
             <div class="col-lg-6">
